Install lxml with html_clean in CI workflow
Add lxml with html_clean extra to dependencies.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install flake8
+          pip install "lxml[html_clean]"
       
       - name: 🐍 语法检查
         run: |
